<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show_favorites"
        android:title="显示收藏"
        android:icon="@drawable/ic_favorite_outline"
        android:checkable="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear_history"
        android:title="@string/clear_history"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_multi_select"
        android:title="@string/multi_select"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_batch_delete"
        android:title="@string/batch_delete"
        app:showAsAction="never"
        android:visible="false" />
    <item
        android:id="@+id/action_batch_export"
        android:title="@string/batch_export"
        app:showAsAction="never"
        android:visible="false" />
</menu>


